--- a/moosend_template.html
+++ b/moosend_template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Page du h&#233;ros</title>
+  <title>Newsletter octobre 2025</title>
   <!-- Email-safe: inline CSS only, no external fonts or JS -->
 </head>
 <body style="margin:0; padding:0; background-color:#f3f4f6;">
@@ -14,7 +14,7 @@
   <![endif]-->
 
   <!-- Preheader (hidden preview text) -->
-  <div style="display:none; font-size:1px; color:#f3f4f6; line-height:1px; max-height:0; max-width:0; opacity:0; overflow:hidden;">Conserver comme h&#233;ros pour contacter</div>
+  <div style="display:none; font-size:1px; color:#f3f4f6; line-height:1px; max-height:0; max-width:0; opacity:0; overflow:hidden;">Bienvenue dans notre &#233;dition de juin. D&#233;couvrez les temps forts, conseils et ressources pour optimiser vos espaces de travail intelligents.</div>
 
   <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="background-color:#f3f4f6;">
     <tr>
@@ -29,7 +29,7 @@
                 <tr>
                   <td valign="middle" style="width:48px;">
                     <a href="https://www.kyoceradocumentsolutions.fr/fr.html" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/logo.png" alt="KYOCERA" width="120" style="display:block; border:0; outline:none; text-decoration:none; height:auto;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/logo.png?v=20251001170655" alt="KYOCERA" width="120" style="display:block; border:0; outline:none; text-decoration:none; height:auto;">
                     </a>
                   </td>
                   <td valign="middle" align="right" style="font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#111;">
@@ -43,7 +43,7 @@
           <tr>
             <td align="left" style="padding:0;">
               <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=1" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/teteSuperieure.png" alt="Comptez sur nous &#8212; Septembre 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/teteSuperieure.png?v=20251001170655" alt="Comptez sur nous &#8212; Septembre 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
               </a>
             </td>
           </tr>
@@ -56,12 +56,12 @@
           </tr>
           <tr>
             <td align="left" style="padding:0 24px 8px 24px;">
-              <h1 style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:24px; line-height:1.3; color:#111827; font-weight:bold;">Page du h&#233;ros</h1>
+              <h1 style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:24px; line-height:1.3; color:#111827; font-weight:bold;">Newsletter octobre 2025</h1>
             </td>
           </tr>
           <tr>
             <td align="left" style="padding:0 24px 18px 24px;">
-              <p style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:14px; line-height:1.6; color:#374151;">Conserver comme h&#233;ros pour contacter</p>
+              <p style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:14px; line-height:1.6; color:#374151;">Bienvenue dans notre &#233;dition de juin. D&#233;couvrez les temps forts, conseils et ressources pour optimiser vos espaces de travail intelligents.</p>
             </td>
           </tr>
 
@@ -86,14 +86,14 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=2" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuDeGauche.png" alt="Sommaire &#8212; Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeGauche.png?v=20251001170655" alt="Sommaire &#8212; Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
                 <tr>
                   <td style="font-family: Arial, Helvetica, sans-serif;">
-                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Page de gauche de trois colonnes</h3>
-                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Page de gauche de trois colonnes</p>
+                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Convention Hexapage</h3>
+                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">La visite du centre-ville de Strasbourg a ajout&#233; une touche culturelle et historique &#224; cette belle parenth&#232;se. Une ville magnifique qui nous a accueillis avec chaleur et charme.&amp;&nbsp; Cliquez pour ajouter une descriptionCliquez pour ajouter une descriptionCliquez pour ajouter une description</p>
                   </td>
                 </tr>
               </table>
@@ -107,14 +107,14 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=3" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuCentral.png" alt="Webinar sp&#233;cial Cloud &#8212; 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuCentral.png?v=20251001170655" alt="Webinar sp&#233;cial Cloud &#8212; 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
                 <tr>
                   <td style="font-family: Arial, Helvetica, sans-serif;">
-                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Page centrale &#224; trois colonnes</h3>
-                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Page centrale &#224; trois colonnes</p>
+                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Webinar du 09 octobre 2025</h3>
+                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Assainir et organiser les contenus d&#8217;entreprise n&#8217;est plus une option mais une n&#233;cessit&#233; pour garantir la performance, la conformit&#233; et la s&#233;curit&#233; des entreprises.</p>
                   </td>
                 </tr>
               </table>
@@ -128,7 +128,7 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=4" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuDeDroite.png" alt="Formation commerciale &#8212; sessions adapt&#233;es" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeDroite.png?v=20251001170655" alt="Formation commerciale &#8212; sessions adapt&#233;es" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -149,7 +149,7 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/Tarif/login_page/index.html" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/tarif.png" alt="Tarif &#8212; Novembre 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/tarif.png?v=20251001170655" alt="Tarif &#8212; Novembre 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -170,17 +170,17 @@
                 <tr>
                   <td style="padding:0 8px;">
                     <a href="https://www.facebook.com/KyoceraDocumentSolutionsFrance/" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/facebook.png" alt="Facebook" width="28" style="display:block; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/facebook.png?v=20251001170655" alt="Facebook" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                   <td style="padding:0 8px;">
                     <a href="https://www.linkedin.com/company/kyocera-document-solutions-france/posts/?feedView=all" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/linkin.png" alt="LinkedIn" width="28" style="display:block; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/linkin.png?v=20251001170655" alt="LinkedIn" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                   <td style="padding:0 8px;">
                     <a href="https://www.youtube.com/user/kdfrsas" style="text-decoration:none;">
-                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/video.png" alt="YouTube" width="28" style="display:block; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/video.png?v=20251001170655" alt="YouTube" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -199,6 +199,14 @@
   </table>
 </body>
 </html>
+
+
+
+
+
+
+
+
 
 
 
